JETcompiler/Tests/bad/bad020.myout
Error while processing expression: cannot compare two different types: "FloatType" and "BooleanType", line 4.
